[package]
name    = "anony_bot"
version = "0.1.0"
authors = ["Simon Fernandez <simon.fernandez@ens-lyon.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.9.3", features = [
    "framework",
    "standard_framework",
    "rustls_backend",
    "collector",
] }
tokio    = { version = "0.2", features = ["macros"] }
